--- a/phpspec.yml
+++ b/phpspec.yml
@@ -1,4 +1,4 @@
 suites:
     client_suite:
-        namespace: TheMarketingLab\Hg\Plugins\PrestaShop
-        psr4_prefix: TheMarketingLab\Hg\Plugins\PrestaShop
+        namespace: TheMarketingLab\Hg\Plugins
+        psr4_prefix: TheMarketingLab\Hg\Plugins
