Use udpated client to support v2 format
- Use Configuration object to configure plugins and clients
- Send an access token

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,12 @@
         }
     },
     "require": {
-        "themarketinglab/hg-client": "~0.2",
+        "themarketinglab/hg-client": "0.3.*@dev",
         "symfony/yaml": "~2.6"
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-feature/events-v2": "0.2.x-dev"
+        }
     }
 }
